# kirsh

./: CMakeLists.txt  README.md  kirsh.cc
common/: utils.cc  utils.h
src/compute/: mlp.cc  mlp.h
src/master/: master.cc  master.h
src/network/: network.h  server.cc
src/worker/: worker.cc  worker.h
